[tool.poetry]
name = "qud-wiki"
version = "1.0rc2"
description = "Desktop app for creating and updating the official Caves of Qud wiki"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pyyaml = "^6.0"
mwclient = "^0.10.1"
hagadias = "^1.2.1"
pillow = "^9.5.0"
pyside6 = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
